Created AppInitializer, AppDirectories, App Files. Refactored ApiClientService, ImgwApiClient, OpenMeteoApiClient, Alert, Deserializer, Operations, AirportsConfig. Added directory and files creation upon startup, improved error handling and cleaned up code.